prevent avatar jumping on new line when commit message is expanded
--HG--
branch : new-ui

--- a/rhodecode/public/css/summary.less
+++ b/rhodecode/public/css/summary.less
@@ -243,6 +243,7 @@
 
         .left-content-message {
             float: left;
+            width: ~"calc(100% - 45px)";
         }
     }
 
